fixed readability

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -247,6 +247,10 @@ h3,h4,h5,h6,a,p,button {
     gap: 2rem;
 }
 
+.packs div p {
+    color: #b4a898;
+}
+
 .pack {
     padding: 1rem 2rem;
     border: solid 3px #77736b;
